<resources>
    <string name="app_name">DroneProject</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Identifiant</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="role_user">COS</string>
    <string name="role_codis">CODIS</string>

    <!-- Strings related to new intervention -->
    <string name="libelle">Libellé</string>
    <string name="adresse">Adresse</string>
    <string name="code">Code</string>

    <string name="code_sap">SAP</string>
    <string name="code_inc">INC</string>

    <!-- Strings related to moyens in popup -->

    <string name="type_fpt">FPT</string>
    <string name="type_vsav">VSAV</string>
    <string name="type_vlcg">VLCG</string>

    <!-- Strings related to Filter parameters in popup -->
    <string name="Satel">SATELLITE</string>
    <string name="Terrain">TERRAIN</string>


    <!-- Strings related to spinner categorie moyens in popup -->
    <string-array name="categories_array">
        <item>SAUVETAGE</item>
        <item>INCENDIE</item>
        <item>RISQUE_PARTICULIER</item>
        <item>EAU</item>
        <item>COMMANDEMENT</item>

    </string-array>







    <string name="Points">Points</string>
    <string name="Moyens">Moyens</string>

    <string name="deplacer">Déplacer</string>
    <string name="confirmer">Confirmer</string>
    <string name="liberer">Liberer</string>
    <string name="parking">Parking</string>
    <string name="supprimer">Supprimer</string>
    <!--drone-->
    <string name="drone_segment">photos le long d\'un segment</string>
    <string name="drone_zone">Vidéo de zone</string>
    <string name="drone_stop">STOP</string>
    <string name="drone_annule">annuler</string>
    <string name="drone_fin">valider</string>
    <string name="drone_supplast">supprimer dernier point</string>
    <string name="drone_boucle">Boucler</string>
    <string name="drone_exclusion">Ajout Zone Exclusion</string>
    <string name="drone_parking">Parking</string>


</resources>
