<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/type_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/type_radio_fpt"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Type" />



        <RadioButton
            android:id="@+id/type_radio_fpt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_fpt" />

        <RadioButton
            android:id="@+id/type_radio_vsav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_vsav" />
        <RadioButton
            android:id="@+id/type_radio_vlcg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_vlcg" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Categorie" />

    <Spinner
        android:id="@+id/spinnerCategorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>