<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/codis_new_frame_fragment">

    </FrameLayout>

    <EditText
        android:id="@+id/libelle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/libelle" />

    <Button
        android:text="Choisir l'adresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/codis_new_btn_adresse" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/code_radio_inc"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Code"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/code_radio_inc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_inc"
            android:textSize="20sp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp" />

        <RadioButton
            android:id="@+id/code_radio_sap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_sap"
            android:textSize="20sp" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Moyens 1er depart"
        android:textSize="20sp"
        android:layout_marginBottom="10dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listMoyens"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollIndicators="left|right"
        android:scrollbarSize="15dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_addMoyen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_plus"
        app:fabSize="normal" />

    <Button
        android:id="@+id/ButtonSendForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:onClick="validate"
        android:text="Valider" />


</LinearLayout>